--- a/src/GUI/ProfilePage.form
+++ b/src/GUI/ProfilePage.form
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <form xmlns="http://www.intellij.com/uidesigner/form/" version="1" bind-to-class="GUI.ProfilePage">
-  <grid id="27dc6" binding="profileppanel" layout-manager="GridLayoutManager" row-count="3" column-count="1" same-size-horizontally="false" same-size-vertically="false" hgap="-1" vgap="-1">
+  <grid id="27dc6" binding="profilePPanel" layout-manager="GridLayoutManager" row-count="3" column-count="1" same-size-horizontally="false" same-size-vertically="false" hgap="-1" vgap="-1">
     <margin top="0" left="0" bottom="0" right="0"/>
     <constraints>
       <xy x="20" y="20" width="500" height="400"/>
@@ -68,7 +68,7 @@
                   <text value="e-mail"/>
                 </properties>
               </component>
-              <component id="a5581" class="javax.swing.JLabel">
+              <component id="a5581" class="javax.swing.JLabel" binding="name">
                 <constraints>
                   <grid row="0" column="2" row-span="1" col-span="1" vsize-policy="0" hsize-policy="0" anchor="8" fill="0" indent="0" use-parent-layout="false"/>
                 </constraints>
@@ -78,7 +78,7 @@
                   <text value="Label"/>
                 </properties>
               </component>
-              <component id="18ac7" class="javax.swing.JLabel">
+              <component id="18ac7" class="javax.swing.JLabel" binding="email">
                 <constraints>
                   <grid row="1" column="2" row-span="1" col-span="1" vsize-policy="0" hsize-policy="0" anchor="8" fill="0" indent="0" use-parent-layout="false"/>
                 </constraints>
