--- a/src/GUI/LPanel.form
+++ b/src/GUI/LPanel.form
@@ -5,7 +5,9 @@
     <constraints>
       <xy x="20" y="20" width="159" height="572"/>
     </constraints>
-    <properties/>
+    <properties>
+      <background color="-5131855"/>
+    </properties>
     <border type="none"/>
     <children>
       <grid id="1d99" layout-manager="GridLayoutManager" row-count="2" column-count="2" same-size-horizontally="false" same-size-vertically="false" hgap="-1" vgap="-1">
@@ -13,7 +15,9 @@
         <constraints>
           <grid row="0" column="0" row-span="1" col-span="1" vsize-policy="3" hsize-policy="3" anchor="0" fill="3" indent="0" use-parent-layout="false"/>
         </constraints>
-        <properties/>
+        <properties>
+          <background color="-5131855"/>
+        </properties>
         <border type="none"/>
         <children>
           <component id="5dc16" class="javax.swing.JButton" binding="profilePhotoButton" default-binding="true">
@@ -21,6 +25,7 @@
               <grid row="1" column="1" row-span="1" col-span="1" vsize-policy="0" hsize-policy="0" anchor="0" fill="3" indent="0" use-parent-layout="false"/>
             </constraints>
             <properties>
+              <background color="-5131855"/>
               <text value="ProfilePhoto"/>
             </properties>
           </component>
@@ -34,6 +39,7 @@
               <grid row="0" column="1" row-span="1" col-span="1" vsize-policy="1" hsize-policy="1" anchor="0" fill="1" indent="0" use-parent-layout="false"/>
             </constraints>
             <properties>
+              <background color="-5131855"/>
               <text value="addProduct"/>
             </properties>
           </component>
@@ -52,7 +58,8 @@
               <grid row="0" column="0" row-span="1" col-span="1" vsize-policy="0" hsize-policy="3" anchor="0" fill="3" indent="0" use-parent-layout="false"/>
             </constraints>
             <properties>
-              <text value="Category 1 Icon"/>
+              <background color="-5131855"/>
+              <text value=""/>
             </properties>
           </component>
         </children>
@@ -70,7 +77,8 @@
               <grid row="0" column="0" row-span="1" col-span="1" vsize-policy="0" hsize-policy="3" anchor="0" fill="3" indent="0" use-parent-layout="false"/>
             </constraints>
             <properties>
-              <text value="Category 2 Icon"/>
+              <background color="-5131855"/>
+              <text value=""/>
             </properties>
           </component>
         </children>
@@ -88,7 +96,8 @@
               <grid row="0" column="0" row-span="1" col-span="1" vsize-policy="0" hsize-policy="3" anchor="0" fill="3" indent="0" use-parent-layout="false"/>
             </constraints>
             <properties>
-              <text value="Category 3 Icon"/>
+              <background color="-5131855"/>
+              <text value=""/>
             </properties>
           </component>
         </children>
