--- a/src/GUI/HomePage.form
+++ b/src/GUI/HomePage.form
@@ -3,9 +3,13 @@
   <grid id="27dc6" binding="homepanel" layout-manager="GridLayoutManager" row-count="1" column-count="1" same-size-horizontally="false" same-size-vertically="false" hgap="-1" vgap="-1">
     <margin top="0" left="0" bottom="0" right="0"/>
     <constraints>
-      <xy x="20" y="20" width="826" height="587"/>
+      <xy x="20" y="20" width="1600" height="900"/>
     </constraints>
-    <properties/>
+    <properties>
+      <maximumSize width="1600" height="900"/>
+      <minimumSize width="1600" height="900"/>
+      <preferredSize width="1600" height="900"/>
+    </properties>
     <border type="none"/>
     <children/>
   </grid>
