--- a/src/GUI/LoginPage.form
+++ b/src/GUI/LoginPage.form
@@ -3,17 +3,21 @@
   <grid id="27dc6" binding="MainPanel" layout-manager="GridLayoutManager" row-count="3" column-count="1" same-size-horizontally="false" same-size-vertically="false" hgap="-1" vgap="-1">
     <margin top="0" left="0" bottom="0" right="0"/>
     <constraints>
-      <xy x="20" y="20" width="828" height="590"/>
+      <xy x="20" y="20" width="1600" height="900"/>
     </constraints>
     <properties>
       <autoscrolls value="false"/>
       <background color="-5131855"/>
+      <foreground color="-5131855"/>
+      <maximumSize width="1600" height="900"/>
+      <minimumSize width="1600" height="900"/>
       <opaque value="true"/>
+      <preferredSize width="1600" height="900"/>
     </properties>
     <border type="none"/>
     <children>
       <grid id="24986" layout-manager="GridLayoutManager" row-count="1" column-count="1" same-size-horizontally="false" same-size-vertically="false" hgap="-1" vgap="-1">
-        <margin top="0" left="300" bottom="0" right="0"/>
+        <margin top="0" left="0" bottom="0" right="0"/>
         <constraints>
           <grid row="0" column="0" row-span="1" col-span="1" vsize-policy="3" hsize-policy="3" anchor="0" fill="3" indent="0" use-parent-layout="false"/>
         </constraints>
@@ -21,7 +25,7 @@
           <background color="-5131855"/>
           <enabled value="false"/>
           <focusCycleRoot value="true"/>
-          <foreground color="-16381681"/>
+          <foreground color="-5131855"/>
           <opaque value="true"/>
         </properties>
         <border type="none"/>
@@ -31,6 +35,8 @@
               <grid row="0" column="0" row-span="1" col-span="1" vsize-policy="3" hsize-policy="1" anchor="0" fill="3" indent="0" use-parent-layout="false"/>
             </constraints>
             <properties>
+              <background color="-5131855"/>
+              <horizontalAlignment value="0"/>
               <text value=""/>
             </properties>
           </component>
@@ -128,9 +134,10 @@
           </vspacer>
           <component id="14003" class="javax.swing.JButton" binding="loginButton" default-binding="true">
             <constraints>
-              <grid row="3" column="2" row-span="1" col-span="1" vsize-policy="0" hsize-policy="3" anchor="0" fill="0" indent="0" use-parent-layout="false"/>
+              <grid row="3" column="2" row-span="1" col-span="1" vsize-policy="0" hsize-policy="2" anchor="0" fill="0" indent="0" use-parent-layout="false"/>
             </constraints>
             <properties>
+              <alignmentY value="0.0"/>
               <background color="-6094768"/>
               <borderPainted value="false"/>
               <contentAreaFilled value="false"/>
