--- a/src/GUI/SignUpConfirmPage.form
+++ b/src/GUI/SignUpConfirmPage.form
@@ -3,10 +3,13 @@
   <grid id="27dc6" binding="panelC" layout-manager="GridLayoutManager" row-count="4" column-count="1" same-size-horizontally="false" same-size-vertically="false" hgap="-1" vgap="-1">
     <margin top="0" left="0" bottom="0" right="0"/>
     <constraints>
-      <xy x="20" y="20" width="821" height="590"/>
+      <xy x="20" y="20" width="1600" height="900"/>
     </constraints>
     <properties>
       <background color="-5131855"/>
+      <maximumSize width="1600" height="900"/>
+      <minimumSize width="1600" height="900"/>
+      <preferredSize width="1600" height="900"/>
     </properties>
     <border type="none"/>
     <children>
