--- a/src/GUI/ProductPage.form
+++ b/src/GUI/ProductPage.form
@@ -153,7 +153,7 @@
           <background color="-5131855"/>
           <font name="Verdana" size="14" style="1"/>
           <foreground color="-16777216"/>
-          <text value="saydesa"/>
+          <text value=""/>
         </properties>
       </component>
       <grid id="f8aa3" layout-manager="GridLayoutManager" row-count="3" column-count="1" same-size-horizontally="false" same-size-vertically="false" hgap="0" vgap="0">
@@ -162,7 +162,7 @@
           <grid row="0" column="1" row-span="3" col-span="1" vsize-policy="0" hsize-policy="0" anchor="9" fill="0" indent="0" use-parent-layout="false"/>
         </constraints>
         <properties>
-          <background color="-5131855"/>
+          <background color="-6094769"/>
           <foreground color="-1"/>
         </properties>
         <border type="none"/>
@@ -232,14 +232,15 @@
             <margin top="0" left="0" bottom="0" right="0"/>
             <constraints>
               <grid row="1" column="0" row-span="1" col-span="1" vsize-policy="0" hsize-policy="0" anchor="0" fill="0" indent="0" use-parent-layout="false">
-                <minimum-size width="396" height="275"/>
-                <preferred-size width="396" height="275"/>
-                <maximum-size width="396" height="275"/>
+                <minimum-size width="400" height="275"/>
+                <preferred-size width="400" height="275"/>
+                <maximum-size width="400" height="275"/>
               </grid>
             </constraints>
             <properties>
               <alignmentX value="0.0"/>
               <alignmentY value="0.0"/>
+              <background color="-6094769"/>
             </properties>
             <border type="line">
               <title-color color="-171"/>
@@ -249,12 +250,14 @@
               <component id="3c499" class="javax.swing.JTextArea" binding="textArea1" default-binding="true">
                 <constraints>
                   <grid row="0" column="0" row-span="1" col-span="1" vsize-policy="0" hsize-policy="0" anchor="0" fill="0" indent="0" use-parent-layout="false">
-                    <minimum-size width="396" height="275"/>
-                    <preferred-size width="396" height="275"/>
-                    <maximum-size width="396" height="275"/>
+                    <minimum-size width="400" height="275"/>
+                    <preferred-size width="400" height="275"/>
+                    <maximum-size width="400" height="275"/>
                   </grid>
                 </constraints>
                 <properties>
+                  <alignmentX value="0.0"/>
+                  <alignmentY value="0.0"/>
                   <background color="-16768928"/>
                   <font name="Verdana" size="16" style="1"/>
                   <foreground color="-1"/>
