--- a/src/GUI/ProductPage.form
+++ b/src/GUI/ProductPage.form
@@ -151,6 +151,7 @@
         </constraints>
         <properties>
           <background color="-5131855"/>
+          <editable value="false"/>
           <font name="Verdana" size="14" style="1"/>
           <foreground color="-16777216"/>
           <text value=""/>
